--- a/charts/apollo/templates/config-service/configmap-configservice.yaml
+++ b/charts/apollo/templates/config-service/configmap-configservice.yaml
@@ -17,7 +17,7 @@ data:
     server.servlet.context-path = {{ .Values.configService.config.contextPath }}
     {{- end }}
     {{- if .Values.configService.config.extendedConfigs }}
-    {{ .Values.configService.config.extendedConfigs }}
+    {{- .Values.configService.config.extendedConfigs | nindent 4 }}
     {{- end }}
   {{- if .Values.db.configdb.autoInitDatabase.enabled }}
   init-database.sql: |
