--- a/charts/pgcat/templates/servicemonitor.yaml
+++ b/charts/pgcat/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.serviceMonitor.enabled }}
 {{- if and .Values.configuration.general.enable_prometheus_exporter .Values.configuration.general.prometheus_exporter_port }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -10,15 +11,34 @@ metadata:
   {{- end }}
   labels:
     {{- include "pgcat.labels" . | nindent 4 }}
+    {{- if .Values.serviceMonitor.additionalLabels }}
+    {{- toYaml .Values.serviceMonitor.additionalLabels | nindent 4 }}
+    {{- end }}
 spec:
   {{- if .Values.serviceMonitor.jobLabel }}
   jobLabel: {{ .Values.serviceMonitor.jobLabel }}
   {{- end }}
   selector:
     matchLabels:
-      app.kubernetes.io/component: apollo-portal
+      {{- include "pgcat.labels" . | nindent 6 }}
   endpoints:
-    - port: http
+    - port: metrics
       path: {{ .Values.serviceMonitor.metricPath | default "/metrics" }}
-
+      interval: {{ .Values.serviceMonitor.interval | default 30 }}
+      {{- if .Values.serviceMonitor.scrapeTimeout }}
+      scrapeTimeout: {{ .Values.serviceMonitor.scrapeTimeout }}
+      {{- end }}
+      {{- if .Values.serviceMonitor.relabelings }}
+      relabelings: {{- include "common.tplvalues.render" ( dict "value" .Values.serviceMonitor.relabelings "context" $) | nindent 6 }}
+      {{- end }}
+      {{- if .Values.serviceMonitor.metricRelabelings }}
+      metricRelabelings: {{- include "common.tplvalues.render" ( dict "value" .Values.serviceMonitor.metricRelabelings "context" $) | nindent 6 }}
+      {{- end }}
+      {{- if .Values.serviceMonitor.honorLabels }}
+      honorLabels: {{ .Values.serviceMonitor.honorLabels }}
+      {{- end }}
+  namespaceSelector:
+    matchNames:
+      - {{ .Release.Namespace }}
+{{- end }}
 {{- end }}
