--- a/charts/pgcat/values.yaml
+++ b/charts/pgcat/values.yaml
@@ -406,7 +406,7 @@ serviceMonitor:
   additionalLabels: { }
   ## @param metricPath specify metric path. default /metrics
   ##
-  metricPath: /prometheus
+  metricPath: /metrics
   ## @param metrics.serviceMonitor.selector Prometheus instance selector labels
   ## ref: https://github.com/bitnami/charts/tree/master/bitnami/prometheus-operator#prometheus-configuration
   ##
