--- a/charts/apollo/templates/portal/deployment-portal.yaml
+++ b/charts/apollo/templates/portal/deployment-portal.yaml
@@ -87,14 +87,20 @@ spec:
               database={{ .Values.db.portaldb.dbName }}
               EOF
               echo "INFO: Checking the database, if it's exist ..."
-              if mysql --defaults-file=/tmp/.my.cnf -E --connect-timeout=30 -w -e 'SHOW TABLES FROM {{ .Values.db.portaldb.dbName }}' | grep -q : ; then
-                echo "INFO: {{ .Values.db.portaldb.dbName }} was exists. skipping to initial SQL table."
+              if mysql --defaults-file=/tmp/.my.cnf --connect-timeout=30 -w -e 'SHOW TABLES FROM {{ .Values.db.portaldb.dbName }}'; then
+                if mysql --defaults-file=/tmp/.my.cnf -E --connect-timeout=30 -w -e 'SHOW TABLES FROM {{ .Values.db.portaldb.dbName }}' | grep -q : ; then
+                  echo "INFO: {{ .Values.db.portaldb.dbName }} was exists. skipping to initial SQL table."
+                else
+                  echo "INFO: {{ .Values.db.portaldb.dbName }} is not exists. creating and init SQL file ..."
+                  echo "INFO: Creating TABLES ..."
+                  mysql --defaults-file=/tmp/.my.cnf -E --connect-timeout=30 -w {{ .Values.db.portaldb.dbName }} < /docker-entrypoint-initdb.d/init-database.sql
+                fi
               else
-                echo "INFO: {{ .Values.db.portaldb.dbName }} is not exists. creating and init SQL file ..."
-                echo "INFO: Creating TABLES ..."
-                mysql --defaults-file=/tmp/.my.cnf -E --connect-timeout=30 -w {{ .Values.db.portaldb.dbName }} < /docker-entrypoint-initdb.d/init-database.sql
+                echo "ERROR: Connect database failed ..."
+                exit 1
               fi
               echo "INFO: starting app container ..."
+              rm -f /tmp/.my.cnf
           volumeMounts:
             - name: configmap-{{ $portalFullName }}
               mountPath: /tmp/application-github.properties
