--- a/charts/pgcat/Chart.yaml
+++ b/charts/pgcat/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.2.0
+appVersion: v1.2.0
 description: A Helm chart for PgCat a PostgreSQL pooler and proxy (like PgBouncer)
   with support for sharding, load balancing, failover and mirroring.
 maintainers:
@@ -14,5 +14,5 @@ dependencies:
       - bitnami-common
     version: 2.x.x
 name: pgcat
-version: 0.3.1
+version: 0.3.2
 kubeVersion: ">=1.26.0"
