--- a/charts/apollo/templates/portal/service-portal.yaml
+++ b/charts/apollo/templates/portal/service-portal.yaml
@@ -21,6 +21,17 @@ metadata:
   labels:
     app.kubernetes.io/component: apollo-portal
     {{- include "apollo.portal.labels" . | nindent 4 }}
+    {{- if .Values.portal.service.extraLabels }}
+    {{- range $key, $value := .Values.portal.service.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+    {{- end }}
+  {{- if .Values.portal.service.extraAnnotations }}
+  annotations:
+    {{- range $key, $value := .Values.portal.service.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+  {{- end }}
 spec:
   type: {{ .Values.portal.service.type }}
   ports:
