--- a/charts/common/Chart.yaml
+++ b/charts/common/Chart.yaml
@@ -1,11 +1,12 @@
 annotations:
   category: Infrastructure
+  licenses: Apache-2.0
 apiVersion: v2
-appVersion: 1.14.2
+appVersion: 2.30.2
 description: A Library Helm Chart for grouping common logic between bitnami charts.
   This chart is not deployable by itself.
-home: https://github.com/bitnami/charts/tree/master/bitnami/common
-icon: https://bitnami.com/downloads/logos/bitnami-mark.png
+home: https://bitnami.com
+icon: https://dyltqmyl993wv.cloudfront.net/downloads/logos/bitnami-mark.png
 keywords:
 - common
 - helper
@@ -13,11 +14,10 @@ keywords:
 - function
 - bitnami
 maintainers:
-- email: containers@bitnami.com
-  name: Bitnami
+- name: Broadcom, Inc. All Rights Reserved.
+  url: https://github.com/bitnami/charts
 name: common
 sources:
-- https://github.com/bitnami/charts
-- https://www.bitnami.com/
+- https://github.com/bitnami/charts/tree/main/bitnami/common
 type: library
-version: 1.14.2
+version: 2.30.2
