--- a/charts/prometheusalert/Chart.yaml
+++ b/charts/prometheusalert/Chart.yaml
@@ -1,12 +1,12 @@
 annotations:
   artifacthub.io/images: |
-    - name: feiyu563/prometheus-alert:v4.9.1
-      image: feiyu563/prometheus-alert:v4.9.1
+    - name: feiyu563/prometheus-alert
+      image: feiyu563/prometheus-alert:v4.9.2
   artifacthub.io/links: |
     - name: Chart Source
       url: https://github.com/dellnoantechnp.github.io/tree/main/charts/xxl-job-admin
 apiVersion: v2
-appVersion: 4.9.1
+appVersion: v4.9.2
 name: prometheusalert
 description: A Alert-Center for Prometheus Grafana and Graylog, alert message deliver to Wechat/Feishu/Lark/email/DingTalk/workWechat/webhook/telegram ...
 home: https://github.com/feiyu563/PrometheusAlert
@@ -24,4 +24,4 @@ dependencies:
     tags:
       - bitnami-common
     version: 2.x.x
-version: 1.3.5
+version: 1.4.0
