--- a/charts/prometheusalert/templates/deployment.yaml
+++ b/charts/prometheusalert/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ['sh', '-c', "/app/PrometheusAlert"]
           env:
