--- a/charts/dingtalk-bot/templates/serviceaccount.yaml
+++ b/charts/dingtalk-bot/templates/serviceaccount.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ include "dingtalk-bot.serviceAccountName" . }}
   labels:
-    {{- include "dingtalk-bot.labels" . | nindent 4 }}
+    {{- include "common.labels.standard" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
