--- a/charts/dingtalk-bot/Chart.yaml
+++ b/charts/dingtalk-bot/Chart.yaml
@@ -31,7 +31,7 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.0.0"
+appVersion: "v1.0.0"
 
 dependencies:
   - name: common
@@ -43,3 +43,5 @@ dependencies:
     condition: redis.enabled
     tags:
       - cache
+
+kubeVersion: ">=1.26.0-0"
